--- a/books/良いコード悪いコードで学ぶ設計入門.md
+++ b/books/良いコード悪いコードで学ぶ設計入門.md
@@ -1,15 +1,100 @@
-# 良いコード／悪いコードで学ぶ設計入門 ―保守しやすい 成長し続けるコードの書き方
+# 良いコード／悪いコードで学ぶ設計入門 ―保守しやすい 成長し続けるコードの書き方;
 
 ## 読む前に,,,
 
 ### 理解していること
 
+- ちょうぜつ本で学んだ、オブジェクト指向の基礎
+- ドメイン駆動設計入門で学んだ、オブジェクト指向を活用した設計手法
+
 ### 理解していないこと
+
+- オブジェクト指向については学べたが、どのように設計すればいいかわからない
+- 具体例がわからない
 
 ### この本から学びたいこと
 
+- オブジェクト指向設計の具体例とバッドプラクティス
+- 実務（2024年7月現在）が構造化プログラミングでレガシーコードだらけなので、オブジェクト指向でどう設計するべきか
+- 以前、安易にサービスクラスとリポジトリパターンを使用したら、重複コードができたり、見通しの悪いクラスばかりになったのでどうすればよかったか
+
 ## 読んだあと
 
-### 自分の行動の変化（日々の業務にどう使うか）
+- 変数
+  - 省略しない 2.1
+  - 再代入しないで目的が変わったら新しい変数にする 2.2
+  - 再代入を防ぐために不変にする 4.1.1
+  - インスタンス変数も不変にする、不変にしないと使い回された時にバグが発生しやすい 4.2.1
+- 引数
+  - 不変にする 4.1.2
+  - 
+- クラス設計
+  - 値と関連するをロジックは一つのクラスにする→値オブジェクト化とロジックをまとめる 2.4、3.2.2
+  - そのクラス一つだけで正常に動作する様に設計する 3.1
+  - インスタンス変数に値を格納する前にコンストラクタで正常値かを判定する（完全コンストラクタ） 3.2.1
+  - インスタンス変数、メソッド引数、ローカル変数（インスタンス変数ではないクラス内メソッドの変数）は不変にする 3.2.3
+  - メソッドの引数をクラスにする、Moneyクラスに加算メソッドがあったら引数をMoneyクラスにすることで値の正常性が担保される 3.2.6
+  - クラス設計は「完全コンストラクタ」＋「値オブジェクト」が基本
+  - 値（インスタンス変数）を変更するメソッドを作る場合はクラスをインスタンスかして返す 4.2.2
+    ```php
+    class Money
+    {
+      private int $MIN = 0;
+      private int $value;
+  
+      function __constracut(int $value)
+      {
+        $this->value = $value;
+      }
+  
+      public function noneBalance(): Money
+      {
+        return new Money($this->MIN);
+      }
+    }
 
+    // 使用例:
+    $none_balance = new Money(0)->noneBalance();
+    echo $none_balance->value; // 出力: 0
+    ```
+    - 状態変更の処理はミューテーターにする 4.3.3
+    - 外部とのやり取り（DB、APIなど）は局所化する（リポジトリパターン） 4.3.4
+    - 安易にstaticを使うと低凝集になる、クラス内で値オブジェクトとロジックが紐づかなくなると低凝集 5.1
+    - インスタンス引数を使用しないメソッドもstaticメソッドと同義なので作らない 5.1.3
+    - staticメソッドは凝集度に関係のないものに使う（ログ出力、フォーマット変換など） 5.1.5
+    - コンストラクタで値オブジェクトを作成できるが、コンストラクタが公開されていると思わぬ用途（初期化）で使われてしまう。防ぐためにprivateコンストラクタ＋目的別のファクトリメソッドを作成する 5.2.1
+    - commonクラスにstaticメソッドを作成する際は低凝集にならないように、横断的関心事（ログ出ろ、キャッシュなど）のみにする 5.3.3
+    - 引数をそのまま出力しない。低凝集になるし、バグの原因になる。「引数は入力値」としてのみ扱い、引数を変更する処理は書かない。出力するなら新しいインスタンスを作成する。 5.4
+    - 引数が多すぎる場合hは、プリミティブ型をやめて値オブジェクトを作成、引数をインスタンス変数にしてロジックをカプセル化する→引数が多い場合はクラス設計を疑う、値とそれを扱うロジックは一つのクラスにし、分散させない 5.5
+    - メソッドチェインで呼び出し側が内部事情を知りすぎている場合は、クラス化できないかを疑う。クラス化で変更容易性が上がる 5.6
+    - プリミティブ型が複数ある場合は、値オブジェクト化することで可読性向上とバグを防ぐ
+- 条件分岐
+  - if文がネストしている場合は早期リターンできないかを考える。早期リターンしておくことで条件が追加された際に記述しやすく読みやすくなる 6.1.1
+  - 同じ条件のswitch文が複数箇所にできそうな場合はinterfaceを使って実装し、Enumをキーにして分岐先のインスタンスを取得する（ストラテジパターン）。switch文の増殖は仕様変更漏れによるバグの元　6.2.5
+  - ドメインルール系の条件分岐はポリシーパターンにする。例えばルールinterfaceを作成し、それを継承して個別のルールを作成、ルールinterfaceを引数にして渡されたルールをすべて満たすか判定することで同じ条件分岐が複数箇所に書かれることを防ぐ 6.3
+  - 分岐が出てきたらinterface設計を試みる、分岐ごとの処理はクラス化を試みる 6.5
+  - フラグ引数で条件分岐、もしくはメソッド内でフラグで条件分岐しているロジックは、ストラテジパターン（interfaceを作り、それを継承したクラスを作成、作成したクラスを呼び出すためのクラスの引数にEnumを使い、Enumの値によって呼び出すクラスを切り替える）を使用する。 6.6.2
+- コレクション（配列）
+  - ループでif文を使う際は、使用言語に搭載された既存のメソッドがないかを確認する。車輪の再発明はしない。 7.1
+  - ループ内でif文がネストした場合は、早期continue、早期breakできないかを疑う 7.2
+  - コレクションに対する同じロジックが複数箇所に書かれることを防ぐために、コレクションに対する処理をカプセル化する（コレクション型インスタンス変数を値オブジェクトにしてロジックを記述）。 7.3.1
+  - コレクションのカプセル化でコレクションを返す際は、不正な変更を防ぐために不変のコレクションを返すようにする。（javaではunmodifiableListメソッドがある） 7.3.2
+
+### 自分の行動の変化（日々の業務にどう使うか）
+（2024年7月現在のメイン言語はPHP）
+
+- 不変をPHPでどう表現するか
+
+- 値とそれに関わるロジックはクラスにまとめる
+- サービスクラスはなんでもかんでもまとめるのではなく（それではただファイル分けしただけ）、「値」と「ロジック」の組み合わせでクラスを作る
+- リポジトリパターンはinterfaceを作成して運用するべき（以前はinterfaceを作っていなかった）
+- interfaceは依存性逆転のために使用するものと思っていたが、条件分岐の際にもリポジトリパターンとして活用できる。
+- 同じ記述が複数箇所に作成される設計はバグの温床になるので、クラスにまとめる。
+- コレクション型を不変にして返す際、PHPだとReadonlyにして返すといい
 ### 新たな疑問点
+
+- DBでリポジトリパターンを実装するべきか
+  - web開発でDBを置き換えることはほぼないと思う
+  - DB変更のためではない理由で実装すればいい？
+- オブジェクト指向を全く取り入れていないレガシーな開発現場で、どのような手順で設計を改善するべきか
+  - 開発チーム全員にオブジェクト指向を学習してもらうのはハードルが高い
