--- a/books/ちょうぜつソフトウェア設計入門.md
+++ b/books/ちょうぜつソフトウェア設計入門.md
@@ -16,18 +16,16 @@
 
 ## 読んだあと
 
-### 自分の行動の変化（日々の業務にどう使うか）
-- 変更に強いコードを書くときは、抽象に依存するように記述する（抽象に依存するとは、インターフェースを間に噛ませること）
-    - インターフェースを使用する
-    - テストから書く（テスト駆動開発を読んでからでもいいかも）
-    - アーキテクチャの分け方を改善する（これもドメイン駆動設計入門を読んでからでもいいかも）
-- サービスクラスを作るときに、サービスクラスはより詳細に分ける
-    - 一クラスにつき一つの役割（単一責任の原則）
-- リポジトリクラスを作るときに、特定の動作に関するメソッドを作らない
-    - より普遍的なメソッドを作る
-        - whereの動作を指定するのではなく、whereの条件を引数で渡すようなメソッドを作り、whereのロジックはサービスクラスに書くなど
-- Laravelではhttps://github.com/jsdecena/laracom/blob/master/project/app/Providers/RepositoryServiceProvider.php#L44このようにインターフェースと具象をbindする
-https://zenn.dev/shundahoy/articles/77892597c6c118
-    - 一つのインターフェースに複数の具象クラスを注入する際はファクトリーパターンを使用する？
+### 要点
+
+ - パッケージ原則
+   - 再利用・リリース等価の原則（REP）
+     - リリースされたものだけを再利用する、再利用させたければリリースする
+       - パッケージが利用可能な状態でリリースする、パッケージ内の影響箇所はすべて再リリースする
+       - リリースの定義には開発メンバーへのリリースも含まれる
+       - リリースと再利用の単位が一致するように、再利用の単位を適切に分ける必要がある
+           - 例えばリリースで他のコード・パッケージに影響が出たり（他の人が変更したコードを使っていて知らないところで影響が出るとか）、他の人が書いたコードへの影響を懸念して変更を躊躇する状態は再利用の単位が適切ではない
+               - 再利用の単位の見極め方は全再利用の原則（CRP）と閉鎖性共通の原則（CCP）にヒントが有る
+   - 全再利用の原則（CRP）
   
 ### 新たな疑問点
