--- a/books/ちょうぜつソフトウェア設計入門.md
+++ b/books/ちょうぜつソフトウェア設計入門.md
@@ -19,13 +19,25 @@
 ### 要点
 
  - パッケージ原則
-   - 再利用・リリース等価の原則（REP）
-     - リリースされたものだけを再利用する、再利用させたければリリースする
-       - パッケージが利用可能な状態でリリースする、パッケージ内の影響箇所はすべて再リリースする
-       - リリースの定義には開発メンバーへのリリースも含まれる
-       - リリースと再利用の単位が一致するように、再利用の単位を適切に分ける必要がある
-           - 例えばリリースで他のコード・パッケージに影響が出たり（他の人が変更したコードを使っていて知らないところで影響が出るとか）、他の人が書いたコードへの影響を懸念して変更を躊躇する状態は再利用の単位が適切ではない
-               - 再利用の単位の見極め方は全再利用の原則（CRP）と閉鎖性共通の原則（CCP）にヒントが有る
-   - 全再利用の原則（CRP）
+  - パッケージとは、アーキテクチャのレイヤー分け、レイヤー内での部品分け、フォルダー分けしたコードの集まりのこと
+   - パッケージ = ディレクトリと考えればいい
+  - 再利用・リリース等価の原則（REP）
+    - リリースされたものだけを再利用する、再利用させたければリリースするという原則
+      - パッケージが利用可能な状態でリリースする、パッケージ内の影響箇所はすべて再リリースする
+      - リリースの定義には開発メンバーへのリリースも含まれる
+      - リリースと再利用の単位が一致するように、再利用の単位を適切に分ける必要がある
+          - 例えばリリースで他のコード・パッケージに影響が出たり（他の人が変更したコードを使っていて知らないところで影響が出るとか）、他の人が書いたコードへの影響を懸念して変更を躊躇する状態は再利用の単位が適切ではない
+              - 再利用の単位の見極め方は全再利用の原則（CRP）と閉鎖性共通の原則（CCP）にヒントが有る
+  - 全再利用の原則（CRP）
+   - 一部だけを再利用することはできないという原則
+   - 一つのパッケージに多くを含みすぎないことで利用する側が、不必要な変更を受け入れる必要がなくなる様にパッケージするべきということ
+    - 交換する部品がそれぞれ小さいほうが交換したいところだけ細かくカスタマイズできて好都合ということ
+    - 単一責任原則によって実現できる、分け過ぎも良くないが分けすぎた細かい部品をあとから合体するほうが、大きな部品を分解するよりも簡単なので分けないよりは分けすぎたほうがいい
+  - 閉鎖性共通の原則（CCP）
+   - 一つの変更が必要なときはできるだけひとつのパッケージだけを交換すればいいようにするという原則
+   - CRPに従うとパッケージ内のコードを変更すると、そのパッケージ内のコードは全て影響を受けるが隣のパッケージは影響を受けない構成になる、つまりCRPは分けるが吉ということ
+    - それに加えてCCPの適切に閉じている・まとめるべきという原則を組み合わせる
+     - 凝集度を上げると疎結合性が高まるということ
+  - 非循環依存関係の原則（ADP）
   
 ### 新たな疑問点
